# simplekernel

./: .CMakeLists.txt.swp  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  badCMakeLists.txt  makefile.config  qemu.sh
drivers/: Makefile  keyboard.c  makefile  serial_port.c  vga.c
include/io/: serial_port.h
include/kernel/: gdt.h  idt.h  isr.h  kern_levels.h  keyboard.h  paging.h  pic_8259.h  pit_i8254.h  printk.h  tty.h  vga.h
iso/boot/: .gitignore
isodir/boot/grub/: grub.cfg  menu.lst  stage2_eltorito
libc/: Makefile  functions.cmake  makefile  stdio.c  string.c
libc/include/: cdefs.h  limits.h  static_assert.h  stdarg.h  stdbool.h  stdc-predef.h  stddef.h  stdint.h  stdio.h  string.h
libc/include/assert/: assert.h
libc/include/bits/: libc-header-start.h  local_lim.h  posix1_lim.h  posix2_lim.h  wchar.h  wordsize.h
libc/include/gnu/: stubs-32.h  stubs-64.h
libc/include/linux/: limits.h
libc/include/sys/: _type.h  cdefs.h
mm/: paging_enable.asm
security/: Makefile  smep_smap.asm
smkrnl/: .gitignore  .makefile.swp  CMakeLists.txt  Makefile  kmain.c  makefile
smkrnl/arch/i386/: CMakeLists.txt  Makefile  boot.s  makefile  protected_mode32.asm  vga.c
smkrnl/debug/: dbg.gdbinit
smkrnl/descriptor-tables/: .gdt.c.swo  .gdt.c.swp  gdt.c  gdt_set.asm  idt.c  idt_set.asm  makefile
smkrnl/include/io/: io_port.h  io_port.s  serial_port.h
smkrnl/include/kernel/: gdt.h  tty.h  vga.h
smkrnl/intps/: exception.c  exception_set.asm  irq.asm  irqs.asm  irqs.c  irqs_set.asm  pic.c
smkrnl/printk/: printk.c
smkrnl/tables/: Makefile  gdt.c  gdt_set.asm  idt.c  idt_set.asm
smkrnl/time/: i8254.c
